--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Flashing Sierpinski</h1>
 		</header>
 			<section id="content">
 				<canvas id="SierpinskiTriangle" data-processing-sources="SierpinskiTriangle.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Alexander Chasov, 4th Period
 	    </footer>
 	</body>
 </html>
